fixed the text-alignment in the chat bot window and also Updated the code to handle marked down format

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1312,6 +1312,7 @@ table td a:hover {
   /* background-color: #e1e1e1; */
   color: black;
   border-radius: 10px 10px 10px 0;
+  text-align: left;
 }
 
 /* Typing Indicator */
